2009-08-10  Raja R Harinath  <harinath@hurrynot.org>

	* parser.cs (ResolveReferences): Allow named groups to be
	referred-to by their group numbers too.

2009-04-23  Sebastien Pouliot  <sebastien@ximian.com>

	* Regex.cs: Remove Compiler-related support for NET_2_1
	* RegexOptions.cs: Remove Compile from values available on NET_2_1

2009-03-04  Zoltan Varga  <vargaz@gmail.com>

	* RxInterpreter.cs (ResetGroups): Avoid allocating larger than needed
	arrays.

2009-02-27  Jonathan Pryor <jpryor@novell.com>

	* Regex.cs (Replace): Check that input & evaluator are not null, as
	  documented in MSDN (and the variance found while testing DbLinq).

2009-02-27  Zoltan Varga  <vargaz@gmail.com>

	* BaseMachine.cs (LTRReplace): Initialize the StringBuilder with an
	appropriate initial length.

2009-02-24  Zoltan Varga  <vargaz@gmail.com>

	* CILCompiler.cs: Partially inline calls to Char.ToLower () to speed
	up ignorecase matching.

2009-02-16  Jb Evain  <jbevain@novell.com>

	* Regex.cs: on the NET_2_1 profile, always use the old engine for now.

2009-02-14  Zoltan Varga  <vargaz@gmail.com>

	* Regex.cs: Add a MONO_NEW_RX variable to enable the new regex
	engine.

2009-02-04  Zoltan Varga  <vargaz@gmail.com>

	* Regex.cs: Disable the new regex engine for now.

2009-01-14  Zoltan Varga  <vargaz@gmail.com>

	* CILCompiler.cs: Avoid throwing exceptions for a few more unhandled opcodes.
	Implement the reverse/ignorecase versions of Reference. Fix the reverse
	version of Bitmap. Error out if a Jump opcode jumps outside the current
	pc range. This works around #466151.

2009-01-12  Jb Evain  <jbevain@novell.com>

	* RxInterpreter.cs: set trace_rx to false for NET_2_1.
	* Regex.cs: set old_rx to false for NET_2_1.

2009-01-07  Zoltan Varga  <vargaz@gmail.com>

	* RxInterpreter.cs: Add support for constant strings in anchors. Fixes
	#464135.

2008-11-18 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* cache.cs: avoid infinite loop.
